--- a/tp-28/styles.css
+++ b/tp-28/styles.css
@@ -1,13 +1,17 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
+    background-color: #000000;
     text-align: center;
     margin: 0;
     padding: 0;
 }
+
+h1{
+    color:antiquewhite;
+}
 header {
     background-color: #000000;
-    padding: 20px;
+    padding: 15;
 }
 nav ul {
     list-style: none;
@@ -26,4 +30,17 @@ nav ul li a {
     margin: 10px;
     border-radius: 10px;
     cursor: pointer;
+}
+
+#amber, #ipa {
+    display: flex;
+    flex-wrap: wrap; /* Para que se acomoden si hay muchas imágenes */
+    justify-content: center; /* Centra las imágenes */
+    gap: 10px; /* Espacio entre imágenes */
+}
+
+#amber img, #ipa img {
+    width: 200px; /* Tamaño más manejable */
+    height: auto; /* Mantiene proporciones */
+    border-radius: 10px;
 }
